Added ignore command

--- a/config.json
+++ b/config.json
@@ -68,7 +68,13 @@
       "Admiral"
     ]
   },
-  "currentOperations": [],
+  "currentOperations": [
+    "korubures",
+    "changwuti",
+    "cenu ku",
+    "cenu",
+    "sarahath"
+  ],
   "authorizedUsers": [
     "637414359655514134",
     "225589125854658560",
@@ -83,14 +89,14 @@
   ],
   "prefix": "/",
   "ignoreList": [
-    "715038247964639282",
     "781481229693222922",
     "568489134880981002",
     "764097736689451028",
     "569809907709247508",
     "569866296074698793",
     "568524008165998603",
-    "800816235574067230"
+    "800816235574067230",
+    "715038247964639282"
   ],
-  "lastTick": "2021-01-18T15:53:12.487Z"
+  "lastTick": "2021-01-19T15:53:13.075Z"
 }
