changing to replit format, no more dual copy :(

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jaskol220",
   "license": "ISC",
   "dependencies": {
+    "@replit/database": "^2.0.0",
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
