--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "moment": "^2.29.1",
     "nconf": "^0.11.0"
   }
 }
