--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "nconf": "^0.11.0"
   }
 }
