--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "https": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "nconf": "^0.11.0"
+    "nconf": "^0.11.0",
+    "rss-parser": "^3.12.0"
   }
 }
