auto replit change

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@replit/database": "^2.0.0",
     "axios": "^0.21.1",
+    "discord-slash-commands-client": "^1.1.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
