--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "nconf": "^0.11.0",
+    "request": "^2.88.2",
     "rss-parser": "^3.12.0"
   }
 }
